Listing des sujet des forum en fonction des categories DONE

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,12 @@
 security:
     encoders:
-        App\Entity\Utilisateur:
+        App\Entity\User:
             algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         user_db:
             entity:
-                class: App\Entity\Utilisateur
+                class: App\Entity\User
                 property: email
     firewalls:
         dev:
